--- a/estudos_css/Atividade1/index.html
+++ b/estudos_css/Atividade1/index.html
@@ -16,19 +16,30 @@
         <div class="container">
             <div class="container_login">
                 <form>
-                    <h1>Log in</h1>
+                    <h1>Ultima</h1>
+                    <span>Log in</span>
                     
                     <input type="text" placeholder="Informe seu e-mail">
                     <input type="text" placeholder="Informe sua senha">
-
+                    <div class="checkbox-area">
+                        <input type="checkbox" id="lembre-de-mim-checkbox">
+                        <label for="lembre-de-mim-checkbox">Lembre de mim</label>
+                        <a href="#">Esqueci minha senha</a>
+                    </div>
                     <button>Entrar</button>
 
                     <div class="line">
-                        <a href="#">Não tenho registro. Desejo criar minha conta</a>
+                        <a href="#">Desejo criar minha conta</a>
                     </div>
                 </form>
             </div>
         </div>
+        <div class="container">
+            <div class="container_img">
+                <img src="Screenshot 2023-03-01 161520.png" width="400" alt="">
+            </div>
+        </div>
+        
     </body>
 
 
