--- a/estudos_css/Atividade1/index.html
+++ b/estudos_css/Atividade1/index.html
@@ -16,10 +16,11 @@
         <div class="container">
             <div class="container_login">
                 <form>
-                    <h1>Log in</h1>
+                    <span>Log in</span>
                     
                     <input type="text" placeholder="Informe seu e-mail">
                     <input type="text" placeholder="Informe sua senha">
+                    
 
                     <button>Entrar</button>
 
@@ -30,7 +31,4 @@
             </div>
         </div>
     </body>
-
-
-
 </html>
