Adicionando arquivos página linkedin

--- a/pagina-linkedIn/linkedin.html
+++ b/pagina-linkedIn/linkedin.html
@@ -13,7 +13,7 @@
     <body>
         <section id="logo">
             <div class="logo">
-                <img src="logo.jpg" width="150" alt="logo">
+                <img src="logo.jpg" width="125" alt="logo">
             </div>
         </section>
         <h1>Conheça sua 
@@ -23,15 +23,15 @@
             <input type="text" id="fname" name="fname" value=""><br>
             <br>
             <label>Senha</label><br>
-            <input type="text" id="lname" name="lname" value="Exibir">
+            <input type="password" id="lname" name="lname" value="Exibir">
             <br>
             <br>
         </form>
-            <a id="esqueceu">Esqueceu a senha?</a>
+            <a id="esqueceu"><b>Esqueceu a senha?</b></a>
             <br>
             <br>
         <div class="in">
-            <button>Entrar</button>
+            <button><strong>Entrar</strong></button>
         </div>
         <div class="imagem">
             <img src="imagem.svg" width="600px" alt="imagem">
