--- a/estudos_html/pages-profile/work-profile.html
+++ b/estudos_html/pages-profile/work-profile.html
@@ -14,11 +14,10 @@
         <a href="https://www.linkedin.com/in/leticia-sayuri-shiroma-franco-65480279/">
             <img class="profile-img" src="CV.jpg" alt="Profile photo" width="200" height="200"> </img>
         </a>
-        <h1>Letícia Franco</h1>
-        <h2><strong>QA Analyst</strong></h2>
-        <h3>
+        <h2 id="nome">Letícia Franco</h2>
+        <h3><strong>QA Analyst</strong></h3>
+        <h4>
             <a href="https://github.com/sayurifranco">GitHub</a>
-        </h3>
         <ol>
             <li>
                 <a href="#sobre">Sobre mim</a>
@@ -26,23 +25,24 @@
             <li>
                 <a href="#habilidades">Habilidades</a>
             </li>
-        </ol>
+        </ol></h4>
     </header>
 <body>
     <section id="Sobre">
+        <br>
         <h1>
             Sobre mim
         </h1>
         <dl>
-            <dt><b>Início</b></dt>
             <br>
+            <dt><b>Início</b></dt>
                 <dd>Formada em Química, com mestrado em Química Analítica e experiência profissional nessas áreas por dez anos.
                 Atualmente estou em transição de carreira para a área de tecnologia na área de Quality Assurance e resido em Portugal.
-                Desde Novembro de 2022 estudo sobre fundamentos de qualidade de software, metodologias ágeis, testes manuais e funcionais, repositório Git e GitHub. Estou estudando também a plataforma Java, sintaxe, métodos, lógica condicional e controle de fluxos em Java.</dd>
+                Desde Novembro de 2022 estudo sobre fundamentos de qualidade de software, metodologias ágeis, testes manuais e funcionais, repositório Git e GitHub. Estou estudando também HTML, CSS, SQL e linguagem Java.</dd>
             <p>
-                <dt><b>Atualmente</b></dt>
                 <br>
-                <dd>Hoje tenho estudado sobre a área de Testes de Qualidade de Software pelo curso da Última School</dd>
+                <dt><b>Atualmente</b></dt>
+                <dd>Hoje tenho estudado sobre a área de Testes de Qualidade de Software pelo curso da Última School.</dd>
             </p>
     </section>
     <section id="habilidades">
@@ -76,20 +76,19 @@
     <a href="#home">Home</a>
 </footer>
 <br>
-<h1>
+<h2 class="Orçamento">
     Solicite um orçamento de Projeto
-</h1>
+</h2>
+<br>
     <form>
         <label>Seu Nome:</label><br>
-        <input type="text" id="fname" name="fname" value=""><br>
+        <input type="text" id="name" name="fname" value=""><br>
         <br>
         <label>Descrição do Projeto:</label><br>
-        <input type="text" id="lname" name="lname" value="Por favor fale em palavras claras qual é o seu problema e qual solução você deseja">
+        <input type="text" id="name" name="lname" value="Qual solução você deseja?">
         <br>
         <br>
-        <input type="submit" value="Submit">
-        <br>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdeoii9mWtKe-2Ypab-dscrknw0UHt1EGD5FsN-U091R_QlNA/viewform?embedded=true" width="640" height="406" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>"
-        
+        <b><input type="submit" id="submit" value="Submit">
+        <br>              
     </form>
 </html>
